eliminando el menu de navegacion de donde no corresponde - incluyendo enlaces en el calendario de plenos

--- a/index.html
+++ b/index.html
@@ -24,22 +24,6 @@
             <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="#">ESTADÍSTICAS</a>
             <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="#">BUSCADOR</a>
             <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="#">CREDITOS</a>
-            <div class="fl-n fl-r--m w-100 texta-c padding-t1 w-a--m padding-0--s">
-              <a id="flecha-anterior" class="cursor-p textd-n vertical-am display-ib" href="">
-                <svg class="vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
-                </svg>
-                <span class="display-ib vertical-am font-08 font-1--s">ANTERIOR</span>
-              </a>
-              <a class="cursor-p textd-n vertical-am display-ib" href="">
-                <span class="display-ib vertical-am font-08 font-1--s">POSTERIOR</span>
-                <svg class="vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0 0h24v24H0z" fill="none"/>
-                    <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
-                </svg>
-              </a>
-            </div>
         </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
@@ -125,7 +109,7 @@
             <div class="w-100 w-45--s margin-b1 display-ib   border-radius-10 bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
                   <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2015</p>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2015/27-07-2015.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de julio de 2015
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -134,7 +118,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2015/02-10-2015.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de octubre de 2015
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -143,7 +127,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2015/30-10-2015.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de octubre de 2015
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -152,7 +136,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2015/27-11-2015.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de noviembre de 2015
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -161,7 +145,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2015/23-12-2015.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 borderc-grey margin-t0">23 de diciembre de 2015
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -176,7 +160,7 @@
 
                   <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2016</p>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/28-01-2016.html">
                     <span  class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de enero de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -185,7 +169,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/26-02-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">26 de febrero de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -194,7 +178,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/23-03-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">23 de marzo de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -203,7 +187,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/29-04-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">29 de abril de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -212,7 +196,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/27-05-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de mayo de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -221,7 +205,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/01-07-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">1 de julio de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -230,7 +214,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/22-07-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">22 de julio de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -239,7 +223,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/30-09-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">30 de septiembre de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -248,7 +232,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/28-10-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de octubre de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -257,7 +241,7 @@
                     </span>
                   </a>
 
-                  <a href="#">
+                  <a href="http://bislai.co/plenos/2016/02-12-2016.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">2 de diciembre de 2016
                     <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                         <path d="M0 0h24v24H0z" fill="none"/>
@@ -266,7 +250,7 @@
                     </span>
                   </a>
 
-                  <a href="#"><span class="ghost-b padding-1 display-ib font-1 w-100 margin-t0 transparent">23 de diciembre de 2016
+                  <a href="http://bislai.co/plenos/2016/23-12-2016.html"><span class="ghost-b padding-1 display-ib font-1 w-100 margin-t0 transparent">23 de diciembre de 2016
                   <svg class="fl-r display-ib vertical-am" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0h24v24H0z" fill="none"/>
                       <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
