--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
       </section>
       <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-      </footer>
+      <p>hola@bislai.co</p>
+    </footer>
     <script>
     $(document).ready(function() {
         $('#tipue_search_input').tipuesearch({
