--- a/landing.html
+++ b/landing.html
@@ -66,7 +66,8 @@
 
       <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-      </footer>
+      <p>hola@bislai.co</p>
+    </footer>
     <script type="text/javascript" src="js/mo.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
     <script>
