--- a/buscador.html
+++ b/buscador.html
@@ -69,7 +69,7 @@
     </script>
     <footer class="padding-1 borderc-grey border-t1 bgc-white woodsmoke font-w6">
   <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
-<p>hola@bislai.co</p>
+<p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
     </footer>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
