cambiando el calendario de plenos

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
           <div class="maw-60 font-0 clearfix">
 
-            <div class="w-100 w-45--s margin-b1 display-ib   border-radius-10 bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
-                  <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2015</p>
+            <div class="w-100 w-45--s margin-b1 display-ib  border-radius-10 bxs-3 bgc-white">
+                  <p class="bgc-black  white padding-1 font-1-5 w-100 border-radius-10 border-radius-bottom-left-0 border-radius-bottom-right-0 letter-0-12 border-b1 borderc-white font-w8 margin-y0">2015</p>
 
                   <a href="http://bislai.co/plenos/2015/27-07-2015.html">
                     <span class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">27 de julio de 2015
@@ -156,9 +156,9 @@
 
             </div>
 
-            <div class="w-100 w-45--s margin-b1 display-ib   border-radius-10 fl-r bxs-3 bgc-white border-radius-top-left-0 border-radius-top-right-0">
+            <div class="w-100 w-45--s margin-b1 display-ib   border-radius-10 fl-r bxs-3 bgc-white">
 
-                  <p class="bgc-fluor padding-1 font-1-5 w-100 border-b1 borderc-white font-w8 margin-y0">2016</p>
+                  <p class="border-radius-10  border-radius-bottom-left-0 border-radius-bottom-right-0 bgc-black white padding-1 font-1-5 w-100 letter-0-12 border-b1 borderc-white font-w8 margin-y0">2016</p>
 
                   <a href="http://bislai.co/plenos/2016/28-01-2016.html">
                     <span  class="ghost-b padding-1 display-ib font-1 w-100 border-b1 borderc-grey margin-t0 transparent">28 de enero de 2016
