--- a/index.html
+++ b/index.html
@@ -13,34 +13,7 @@
     <header class="padding-0-1 font-0 border-b1 borderc-grey w-100">
         <div class="maw-60">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">
-              <svg style="max-width: 60px;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="455.1px" height="485.2px" viewBox="0 0 455.1 485.2">
-              <style type="text/css">
-                .st0{fill:#042343;}
-                .st1{fill:#F99D82;}
-                .st2{fill:#F5DABD;}
-              </style>
-              <defs>
-              </defs>
-              <g>
-                <path class="st0" d="M447.1,485.2H8c-4.4,0-8-3.6-8-8V8c0-4.4,3.6-8,8-8l439.1,0c4.4,0,8,3.6,8,8v469.2
-                  C455.1,481.6,451.5,485.2,447.1,485.2z"/>
-              </g>
-              <rect x="370.5" y="396.2" class="st1" width="55" height="55"/>
-              <rect x="297" y="396.2" class="st1" width="55" height="55"/>
-              <g>
-                <path class="st2" d="M50.1,34.6c0,2.7-1.3,5.4-4.6,6.8c4.1,1.3,5.7,5.7,5.7,7.9c0,7.9-5.9,10.4-13.2,10.4c-5.6,0-11.2,0-16.8,0
-                  V24.3c5.6,0,11.2,0,16.8,0C44.9,24.3,50.1,27.4,50.1,34.6z M27.8,38.5H38c4.2,0,5.6-1.8,5.6-3.8c0-1.6-1.3-4.3-5.6-4.3H27.8V38.5z
-                   M27.8,53.4H38c2.7,0,6.6-0.9,6.6-4.2c0-3.2-3.9-4.8-6.6-4.8H27.8V53.4z"/>
-                <path class="st2" d="M55.9,59.7V24.3h6.6v35.3H55.9z"/>
-                <path class="st2" d="M91.6,32.8c-1.2-2-4.5-3.9-8.4-3.9c-4.9,0-7.3,2.1-7.3,4.7c0,3.1,3.6,3.9,7.9,4.4c7.4,0.9,14.2,2.8,14.2,11.3
-                  c0,7.9-7,11.3-14.8,11.3c-7.2,0-12.8-2.2-15.4-8.7l5.6-2.9c1.6,3.9,5.7,5.6,9.9,5.6c4.2,0,8.1-1.5,8.1-5.3c0-3.3-3.5-4.7-8.2-5.2
-                  c-7.2-0.9-13.9-2.8-13.9-10.7c0-7.3,7.2-10.2,13.7-10.3c5.5,0,11.2,1.6,13.9,7L91.6,32.8z"/>
-                <path class="st2" d="M109.9,24.3v29.2H128v6.2h-24.8V24.3H109.9z"/>
-                <path class="st2" d="M157.8,53h-18.5l-3,6.7h-7.2L145,24.3h7.3l15.9,35.3h-7.3L157.8,53z M148.6,31.7l-6.6,15h13.1L148.6,31.7z"/>
-                <path class="st2" d="M170.6,59.7V24.3h6.6v35.3H170.6z"/>
-              </g>
-              </svg>
-
+              Bislai
             </a>
             <div class="w-50 display-ib texta-r">
                 <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
@@ -134,86 +107,86 @@
 
 
 
-          <div class="maw-60 margin-y2 border-1 borderc-black f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-              <div class="w-30 f-flex-1 texta-c border-r1 borderc-black">
-                <span class="font-3 font-w8 bgc-white textd-n h-100p f-items-center f-flex f-justify-center">2015</span>
+          <div class="maw-60 margin-y2 border-1 borderc-black f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
+              <div class="w-30--s f-flex-1--s texta-c--s padding-1 border-r1--s borderc-black">
+                <span class="font-3 font-w8 bgc-white--s textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">2015</span>
               </div>
-              <div class="w-70  texta-c f-flex h-200px f-flex-column">
-                  <div class="f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-                      <div class="border-r1 borderc-black f-flex-1 texta-c">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
+              <div class="w-70--s  texta-c--s f-flex--s h-200px--s f-flex-column--s">
+                  <div class="f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
+                      <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
                       </div>
-                      <div class="border-r1 borderc-black f-flex-1 texta-c">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
+                      <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
                       </div>
-                      <div class="f-flex-1 texta-c">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
+                      <div class="f-flex-1--s texta-c--s padding-1">
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
                       </div>
                   </div>
-                <div class="border-t1 borderc-black f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
+                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
                   </div>
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
                   </div>
-                  <div class="f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center">Bislai</a>
+                  <div class="f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">Bislai</a>
                   </div>
 
                 </div>
               </div>
           </div>
 
-          <div class="margin-y2 maw-60 border-1 borderc-black f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-              <div class="w-30 f-flex-1 texta-c border-r1 borderc-black">
-                <span class="night-rider font-3 font-w8 bgc-white textd-n h-100p f-items-center f-flex f-justify-center">2016</span>
+          <div class="margin-y2 maw-60 border-1 borderc-black f-flex-1--s--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s--s f-flex-row--s">
+              <div class="w-30--s f-flex-1--s--s texta-c--s padding-1 border-r1--s borderc-black">
+                <span class="night-rider font-3 font-w8 bgc-white--s textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">2016</span>
               </div>
-              <div class="w-70  texta-c f-flex h-400px f-flex-column">
-                  <div class="f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-                      <div class="border-r1 borderc-black f-flex-1 texta-c">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
+              <div class="w-70--s  texta-c--s  f-flex--s h-400px--s f-flex-column--s">
+                  <div class="f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
+                      <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
                       </div>
-                      <div class="border-r1 borderc-black f-flex-1 texta-c">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
+                      <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
                       </div>
-                      <div class="f-flex-1 texta-c">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
+                      <div class="f-flex-1--s texta-c--s padding-1">
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
                       </div>
                   </div>
-                <div class="border-t1 borderc-black f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
+                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s  f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
                   </div>
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
                   </div>
-                  <div class="f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="">1 de julio de 2016</a>
+                  <div class="f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="">1 de julio de 2016</a>
                   </div>
 
                 </div>
-                <div class="border-t1 borderc-black f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
+                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
                   </div>
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
                   </div>
-                  <div class="f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="">28 de octubre de 2016</a>
+                  <div class="f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="">28 de octubre de 2016</a>
                   </div>
 
                 </div>
-                <div class="border-t1 borderc-black f-flex-1 texta-c f-flex f-flex-nowrap f-justify-center f-flex-row">
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
+                <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
                   </div>
-                  <div class="border-r1 borderc-black f-flex-1 texta-c">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center" href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
+                  <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
                   </div>
-                  <div class="f-flex-1 texta-c">
-                      <span class="night-rider underline ghost-b textd-n h-100p f-items-center f-flex f-justify-center">Bislai</span>
+                  <div class="f-flex-1--s texta-c--s padding-1">
+                      <span class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">Bislai</span>
                   </div>
 
                 </div>
