cerrando la issue #24 :up_arrow:

--- a/estadisticas.html
+++ b/estadisticas.html
@@ -46,6 +46,10 @@
     <div class="maw-60 padding-1 padding-1-0--l">
       <p class="font-2 margin-0 margin-y1--m">Estadísticas acumuladas</p>
       <p class="font-1">Esta serie de estadísticas se ha hecho a partir de las <span class="font-w8">mociones ordinarias</span> que se han realizado en el pleno del Ayuntamiento de Zaragoza, desde el 15 de junio de 2015 hasta el 14 de febrero de 2017. En algunas mociones se votan diferentes puntos, así que las <span class="font-w8">estadísticas se han obtenido de la suma de todas las votaciones</span>.</p>
+
+      <p class="font-w8">En las estadísticas están incluídos todos los plenos celebrados hasta el 14 de febrero de 2017.</p>
+
+      <p class="font-w8">Por acuerdo de la junta de portavoces, cada grupo de la oposición puede presentar 4 mociones por pleno y Zaragoza En Común, como gobierno, solamente 2.</p>
     </div>
 
     <section id="unanimidad" class="w-100 h-100vh--l border-t1 borderc-french-grey padding-1 padding-1-0--l">
