--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">
               Bislai
             </a>
-            <div class="w-50 display-ib texta-r">
+            <div class="w-50--s display-b display-ib--s texta-r--s padding-b1">
                 <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
+                <a href="http://facebook.com/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Facebook</a>
                 <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
             </div>
         </div>
