eliminando extension de las URL

--- a/buscador.html
+++ b/buscador.html
@@ -25,15 +25,15 @@
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10 ">
         <div class="maw-60 texta-c texta-l--m">
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/estadisticas.html">ESTADÍSTICAS</a>
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="#">BUSCADOR</a>
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/creditos.html">CREDITOS</a>
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/creditos">CREDITOS</a>
 
         </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
         <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="http://bislai.co/buscador.html">
+            <form class="w-100 w-60--s" action="http://bislai.co/buscador">
                 <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -45,7 +45,7 @@
     </div>
     <div class="border-b1 borderc-grey w-100 padding-2-0">
         <div class="maw-60 pos-r">
-            <form action="buscador.html">
+            <form action="buscador">
                 <input class="w-40 padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search transparent" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
