--- a/creditos.html
+++ b/creditos.html
@@ -30,7 +30,7 @@
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
         <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="http://bislai.co/buscador.html">
+            <form class="w-100 w-60--s" action="http://bislai.co/buscador">
                 <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
