--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10 ">
         <div class="maw-60 texta-c texta-l--m">
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/estadisticas.html">ESTADÍSTICAS</a>
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="#">BUSCADOR</a>
-            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/creditos.html">CREDITOS</a>
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib" href="http://bislai.co/creditos">CREDITOS</a>
 
         </div>
     </nav>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
         <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="buscador.html">
+            <form class="w-100 w-60--s" action="buscador">
                 <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -44,7 +44,7 @@
     </div>
     <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
         <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="http://bislai.co/buscador.html">
+            <form class="w-100 w-60--s" action="http://bislai.co/buscador">
                 <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -115,21 +115,21 @@
               <div class="w-70--s  texta-c--s f-flex--s h-200px--s f-flex-column--s">
                   <div class="f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
                       <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015.html">27 de julio de 2015</a>
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015">27 de julio de 2015</a>
                       </div>
                       <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015.html">2 de octubre de 2015</a>
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015">2 de octubre de 2015</a>
                       </div>
                       <div class="f-flex-1--s texta-c--s padding-1">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015.html">30 de octubre de 2015</a>
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015">30 de octubre de 2015</a>
                       </div>
                   </div>
                 <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">27 de noviembre de 2015</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">27 de noviembre de 2015</a>
                   </div>
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2015</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">23 de diciembre de 2015</a>
                   </div>
                   <div class="f-flex-1--s texta-c--s padding-1">
                       <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">Bislai</a>
@@ -146,21 +146,21 @@
               <div class="w-70--s  texta-c--s  f-flex--s h-400px--s f-flex-column--s">
                   <div class="f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
                       <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015.html">28 de enero de 2016</a>
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-07-2015">28 de enero de 2016</a>
                       </div>
                       <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015.html">26 de febrero de 2016</a>
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/02-10-2015">26 de febrero de 2016</a>
                       </div>
                       <div class="f-flex-1--s texta-c--s padding-1">
-                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015.html">23 de marzo de 2016</a>
+                          <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/30-10-2015">23 de marzo de 2016</a>
                       </div>
                   </div>
                 <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s  f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">29 de abril de 2016</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">29 de abril de 2016</a>
                   </div>
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">27 de mayo de 2016</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">27 de mayo de 2016</a>
                   </div>
                   <div class="f-flex-1--s texta-c--s padding-1">
                       <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="">1 de julio de 2016</a>
@@ -169,10 +169,10 @@
                 </div>
                 <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">22 de julio de 2016</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">22 de julio de 2016</a>
                   </div>
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">30 de septiembre de 2016</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">30 de septiembre de 2016</a>
                   </div>
                   <div class="f-flex-1--s texta-c--s padding-1">
                       <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="">28 de octubre de 2016</a>
@@ -181,10 +181,10 @@
                 </div>
                 <div class="border-t1--s borderc-black--s f-flex-1--s texta-c--s f-flex--s f-flex-nowrap--s f-justify-center--s f-flex-row--s">
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015.html">2 de diciembre de 2016</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/27-11-2015">2 de diciembre de 2016</a>
                   </div>
                   <div class="border-r1--s borderc-black f-flex-1--s texta-c--s padding-1">
-                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015.html">23 de diciembre de 2016</a>
+                      <a class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s" href="http://bislai.co/plenos/2015/23-12-2015">23 de diciembre de 2016</a>
                   </div>
                   <div class="f-flex-1--s texta-c--s padding-1">
                       <span class="night-rider underline ghost-b textd-n h-100p f-items-center--s f-flex--s f-justify-center--s">Bislai</span>
