arreglando el buscador en creditos

--- a/creditos.html
+++ b/creditos.html
@@ -23,7 +23,7 @@
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10">
           <div class="maw-60">
-              <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">ESTADÍSTICAS</a>
+              <a class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
               <a id="buscador" class="pfont-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">BUSCADOR</a>
               <a class="font-1 padding-r1-5 textd-n underline letter-0-12 black" href="#">CREDITOS</a>
           </div>
@@ -84,6 +84,7 @@
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
       <p class="maw-60 padding-1-0 margin-t0">hola@bislai.co</p>
     </footer>
+    <script type="text/javascript" src="js/buscador.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
