--- a/index.html
+++ b/index.html
@@ -11,41 +11,28 @@
 
 <body class="mih-100">
     <header class="padding-0-1 font-0 border-b1 borderc-grey w-100">
-        <div class="maw-60">
+        <nav class="maw-60 nav-grid">
             <a href="http://bislai.co" class="w-50 textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8">
               Bislai
             </a>
+            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             <div class="w-50--s display-b display-ib--s texta-r--s padding-b1">
                 <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
                 <a href="http://facebook.com/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Facebook</a>
                 <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
             </div>
-        </div>
+        </nav>
     </header>
     <nav class="w-100 border-b1 borderc-grey padding-1 pos-sy bgc-white-9 tp-0 zi-10 ">
         <div class="maw-60 texta-c texta-l--m">
            <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-           <a id="buscador" class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="#">BUSCADOR</a>
-
 
         </div>
     </nav>
-    <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
+    <div class="border-b1 borderc-grey w-100 padding-1 grey padding-1-0--l">
         <div class="maw-60 pos-r">
             <form class="w-100 w-60--s" action="buscador">
-                <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
-                <button class="btn-search bgc-white" type="submit">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
-                    </svg>
-                </button>
-            </form>
-        </div>
-    </div>
-    <div class="border-b1 borderc-grey w-100 padding-1 grey containerBuscador padding-1-0--l">
-        <div class="maw-60 pos-r">
-            <form class="w-100 w-60--s" action="http://bislai.co/buscador">
-                <input placeholder="Busca y encuentra..." class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
+                <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
                 <button class="btn-search bgc-white" type="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                         <path d="M23.9,23.3l-6.8-6.8a9.9,9.9,0,1,0-.6.6l6.8,6.8a.4.4,0,0,0,.6-.6Zm-14-4.4a9,9,0,1,1,9-9A9,9,0,0,1,9.9,18.9Z" fill="#010101" />
