--- a/estadisticas.html
+++ b/estadisticas.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="mih-100">
-    <header class="padding-0-1 font-0 border-b1 borderc-grey w-100">
+    <header class="padding-0-1 font-0 border-b1 borderc-greyc w-100">
         <nav class="maw-60 nav-grid">
             <a href="http://bislai.co" class="textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8 font-s nav-grid-first">
               Bislai
@@ -22,7 +22,7 @@
             </div>
         </nav>
     </header>
-    <div class="border-b1 border-t1 borderc-greyc w-100 padding-1 grey padding-1-0--l">
+    <div class="border-b1 borderc-greyc w-100 padding-1 grey padding-1-0--l">
         <div class="maw-60 pos-r">
             <form class="w-100 w-60--s" action="http://bislai.co/buscador">
                 <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
