modificando el footer y el header

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
               BISLAI
             </a>
             <div class="nav-grid-second">
-                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline letter-0 letter-0-12--s black vertical-am display-ib font-s" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
-                <a href="http://twitter.com/debislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">Twitter</a>
-                <a href="http://github.com/jorgeatgu/bislai" class="black  font-1 display-ib vertical-am textd-n texta-r padding-r1">GitHub</a>
+                <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             </div>
         </nav>
     </header>
