aplicando la nueva cabecera a todos los plenos

--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
         </div>
     </div>
     <div class="maw-60 padding-1 padding-1-0--l">
-        <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Toda la <strong>información en bruto, sin distinción alguna</strong>. La idea es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
+        <p class="font-1">Bislai es la <strong>respuesta</strong> a lo que encontre en la página de plenos del <strong>Ayuntamiento de Zaragoza</strong>. Allí la <strong>información se presentaba en bruto, sin distinción alguna</strong>. El fin de Bislai es mostrar los plenos de una manera más <strong>accesible y visual</strong>.
         </p>
-        <p class="font-1">Las <strong>decisiones</strong> que se toman en el pleno <strong>afectan a los 666058</strong> habitantes de <strong>Zaragoza</strong>.
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
     </div>
     <section class="border-t1  padding-1 border-b1 grey borderc-grey padding-1-0--l">
-        <h2 class="margin-b0  maw-60 font-2 margin-b2">Calendario de plenos</h2>
+        <h2 class="margin-b0  maw-60 font-2 margin-b2 font-s">Calendario de plenos</h2>
     </section>
     <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
