--- a/buscador.html
+++ b/buscador.html
@@ -14,9 +14,9 @@
 <body class="mih-100">
     <header class="padding-0-1 font-0 border-b1 borderc-greyc w-100">
         <nav class="maw-60 nav-grid">
-            <a href="http://bislai.co" class="textd-n  black  font-3  margin-y0  bold display-ib vertical-am font-w8 font-s nav-grid-first">
-              Bislai
-            </a>
+            <a href="http://bislai.co" class="textd-n  black  font-2 padding-1-0  margin-y0  bold display-ib vertical-am font-w8 font-s nav-grid-first">
+BISLAI
+</a>
             <div class="nav-grid-second">
                 <a class="font-08 font-1--s padding-r0 padding-r1-5--m textd-n underline black vertical-am display-ib font-s font-w6 letter-0-12--m" href="http://bislai.co/estadisticas">ESTADÍSTICAS</a>
             </div>
