modificando la cabecera

--- a/buscador.html
+++ b/buscador.html
@@ -13,12 +13,12 @@
 </head>
 
 <body class="mih-100">
-    <header class="padding-0-1 font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
+    <header class="font-0 border-b1 borderc-greyc grey w-100 pos-sy tp-0 zi-10">
         <nav class="maw-60 nav-grid">
-            <a href="http://bislai.co" class="textd-n  black font-1 font-2--m padding-0 padding-1-0--m  margin-y0  bold display-ib vertical-am font-w8 font-s nav-grid-first">
-        BISLAI
-        </a>
-            <div class="padding-1 w-100--m maw-70p--l">
+            <a href="http://bislai.co" class="textd-n black font-1 font-2--m margin-y0  bold display-ib vertical-am font-w2 letter-0-25 font-s nav-grid-first">
+            BISLAI
+            </a>
+            <div class="w-100--m maw-70p--l">
                 <div class="pos-r">
                     <form action="http://bislai.co/buscador">
                         <input placeholder="Busca en cualquier pleno" class="w-80 w-70--m padding-1 vertical-at" type="text" name="q" id="tipue_search_input">
