implementando el calendario de plenos

--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
     </div>
     <section class="border-t1  padding-1 border-b1 grey borderc-grey padding-1-0--l">
         <h2 class="margin-b0  maw-60 font-2 margin-b2 font-s">Calendario de plenos</h2>
+        <input class="input-record" id="tab1" type="radio" name="tabs" checked>
+        <label class="label-record" for="tab1">2015</label>
+        <input class="input-record" id="tab2" type="radio" name="tabs">
+        <label class="label-record" for="tab2">2016</label>
+        <input class="input-record" id="tab3" type="radio" name="tabs">
+        <label class="label-record" for="tab3">2017</label>
+        <!-- ENERO -->
+        <section class="tabla-calendario contenido1">
+            <p>2015</p>
+        </section>
+        <!-- FEBRERO -->
+        <section class="tabla-calendario  contenido2">
+            <p>2016</p>
+        </section>
+
+        <section class="tabla-calendario  contenido3">
+            <p>2017</p>
+        </section>
     </section>
     <footer class="padding-1 padding-1-0--l borderc-grey border-t1 bgc-white woodsmoke font-w6">
         <p class="maw-60 padding-1-0 luckyPoint">© Hecho en Zaragoza con mucha maña por un <a href="http://jorgeatgu.com" target="_blank">maño</a> - MMXVII</p>
