contenedores y diseño para el mapa

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
     </div>
-    <div class="mapa"></div>
+    <section class="mapa-container padding-5-0">
+        <div class="mapa"></div>
+    </section>
     <section class="border-t1  padding-1 border-b1 grey borderc-grey padding-1-0--l">
         <h2 class="margin-b0  maw-60 font-2 margin-b2 font-s">Calendario de plenos</h2>
         <input class="input-record" id="tab1" type="radio" name="tabs" checked>
