ajustando zoom y coordenadas para Zaragoza

--- a/mapa.html
+++ b/mapa.html
@@ -50,9 +50,9 @@
 
             var $map = $("#map");
             var map = new google.maps.Map($map[0], {
-                    zoom: 6,
+                    zoom: 10,
                     mapTypeId: google.maps.MapTypeId.ROADMAP,
-                    center: new google.maps.LatLng(-18.2, 35.1), // Mozambique
+                    center: new google.maps.LatLng(41.6517501, -0.9300004), // Mozambique
                     styles:[{"stylers": [{"saturation": -75},{"lightness": 75}]}]
                 });
 
