eliminando separacion e incluyendo nuevos estilos

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </p>
         <p class="font-1">Todos los datos han sido obtenidos de la <a href="https://www.zaragoza.es/ciudad/organizacion/plenos/activ_plenarias.htm">web del Ayuntamiento de Zaragoza.</a></p>
     </div>
-    <section class="mapa-container padding-5-0">
+    <section class="mapa-container">
         <div id="map-wrap">
             <div id="map">
             </div>
